# swift-kit

./: .prettierignore  README.md  TODO.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
bun-sidecar/: build.ts  index.ts  (+2 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: abort_download.rs  always_on_top.rs  bulk_rename.rs  convert_to_mp4.rs  download_file.rs  fetch_files.rs  finder.rs  generate_video_thumbnails.rs  get_available_disks.rs  get_video_details.rs  highlight_file.rs  image_compress.rs  image_convert.rs  image_crop.rs  image_resize.rs  interpolate.rs  intro_outro_prediction.rs  lib.rs  migrations.rs  no_intro_outro.rs  rename_files.rs  scrape_anime.rs  scrape_game.rs  scrape_movie.rs  search_anime.rs  search_game.rs  search_movie.rs  trash_folder.rs  yt_download.rs
src-tauri/src/commands/: compress_image.rs  convert_image.rs  download_yt_videos.rs  fetch_files.rs  get_default_browser.rs  mod.rs  rename_files.rs  resize_image.rs  yt_url_data.rs
src-tauri/src/commands/img_compressors/: jpeg.rs  png.rs  webp.rs
src-tauri/src/img_compressors/: jpeg.rs  png.rs  webp.rs
src-tauri/src/scrapers/: anime_images.rs  fetch_tmdb_images.rs  imdb.rs  mal.rs  mod.rs  movie_poster.rs  steam.rs  tmdb_assets.rs  yt_trailer.rs
src-tauri/src/utils/: check_stream_exists.rs  common_headers.rs  decode_html_entities.rs  file_types.rs  format_duration.rs  is_valid_timestamp.rs  mod.rs  parse_duration.rs  request_client.rs
(+139 files in other folders)
